--- a/index.html
+++ b/index.html
@@ -75,6 +75,52 @@
             margin-top: 20px;
             font-size: 1.5em;
         }
+        .popup {
+            display: none;
+            position: fixed;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            width: 300px;
+            padding: 20px;
+            height: 150px;
+            border-radius: 20px;
+            padding: 20px;
+            background-color:  #740574;
+            border: none;
+            color: #fffeff;
+            text-align: center;
+            border-radius: 10px;
+            text-align: center;
+            font-size: 1.2em;
+            z-index: 1000;
+        }
+        .popup button {
+            margin-top: 10px;
+            padding: 10px;
+            background-color: #ffeffe;
+
+            width: 100px;
+            color: #000;
+            border: none;
+            cursor: pointer;
+        }
+        #popup-message{
+            text-align: center;
+            margin-top: 30px;
+        }
+        .popup.show {
+            display: block;
+        }
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #00000080;
+            z-index: 999;
+        }
     </style>
 </head>
 <body>
@@ -101,6 +147,12 @@
         <button id="enter-btn" class="button" disabled>Enter</button>
     </div>
 
+    <div id="popup" class="popup">
+        <div id="popup-message"></div>
+        <button onclick="closePopup()">OK</button>
+    </div>
+
+    <div id="overlay" class="overlay" style="display: none;"></div>
     <script src="main.js"></script>
 </body>
 </html>
